fix broken layout when a lot of text

--- a/src/app/(tradizionale)/tradizionale/adozioni/i-nostri-ospiti/[id]/page.module.css
+++ b/src/app/(tradizionale)/tradizionale/adozioni/i-nostri-ospiti/[id]/page.module.css
@@ -12,6 +12,7 @@
 }
 
 .mainContent {
+  min-height: 100%;
   display: flex;
   gap: 25px;
   margin-bottom: 125px;
@@ -44,7 +45,7 @@
 }
 
 .textContainer {
-  height: 500;
+  /* height: 500; */
   display: flex;
   flex-direction: column;
   gap: 5px;
